--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         "php": "^7.1.3",
         "artesaos/seotools": "^0.14.0",
         "fideloper/proxy": "^4.0",
+        "genealabs/laravel-model-caching": "^0.5.6",
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
-        "spatie/schema-org": "^2.2",
-        "watson/rememberable": "^3.0"
+        "spatie/schema-org": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
