--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
-        "spatie/schema-org": "^2.2"
+        "spatie/schema-org": "^2.2",
+        "wearejust/laravel-amp": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
