--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "artesaos/seotools": "^0.14.0",
         "fideloper/proxy": "^4.0",
         "genealabs/laravel-model-caching": "^0.5.6",
+        "intervention/image": "^2.5",
         "laravel-notification-channels/facebook-poster": "^1.5",
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.1",
