--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.0",
         "artesaos/seotools": "^0.14.0",
+        "biscolab/laravel-recaptcha": "^3.5",
         "fideloper/proxy": "^4.0",
         "genealabs/laravel-model-caching": "^0.5.6",
         "intervention/image": "^2.5",
