--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "intervention/image": "^2.5",
         "laravel-notification-channels/facebook-poster": "^1.5",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.3",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "spatie/laravel-feed": "^2.2",
