--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel-notification-channels/facebook-poster": "^1.5",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
+        "laravel/scout": "^7.1",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "spatie/laravel-feed": "^2.2",
