--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,16 @@
         "biscolab/laravel-recaptcha": "^3.5",
         "fideloper/proxy": "^4.0",
         "genealabs/laravel-model-caching": "^0.5.6",
+        "glorand/laravel-model-settings": "^3.2",
         "intervention/image": "^2.5",
         "laravel-notification-channels/facebook-poster": "^1.5",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
-        "laravel/scout": "^7.1",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "spatie/laravel-feed": "^2.2",
         "spatie/laravel-responsecache": "^5.0",
+        "spatie/laravel-searchable": "^1.3",
         "spatie/laravel-sitemap": "^5.3",
         "spatie/schema-org": "^2.2"
     },
