--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/passport": "^7.3",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
+        "overtrue/laravel-like": "^1.0",
         "spatie/laravel-feed": "^2.2",
         "spatie/laravel-responsecache": "^5.0",
         "spatie/laravel-sitemap": "^5.3",
