--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-like": "^1.0",
+        "rennokki/befriended": "^1.3",
         "rennokki/rating": "^1.1",
         "spatie/laravel-feed": "^2.2",
         "spatie/laravel-responsecache": "^5.0",
