--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.0",
+        "anlutro/l4-settings": "^0.8.3",
         "artesaos/seotools": "^0.14.0",
         "biscolab/laravel-recaptcha": "^3.5",
         "fideloper/proxy": "^4.0",
         "genealabs/laravel-model-caching": "^0.5.6",
-        "glorand/laravel-model-settings": "^3.2",
         "intervention/image": "^2.5",
         "laravel-notification-channels/facebook-poster": "^1.5",
         "laravel/framework": "5.8.*",
