--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "genealabs/laravel-model-caching": "^0.5.6",
         "intervention/image": "^2.5",
         "laravel-notification-channels/facebook-poster": "^1.5",
+        "laravel-notification-channels/telegram": "^0.0.5",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
         "laravel/socialite": "^4.1",
