--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "artesaos/seotools": "^0.14.0",
         "binarytorch/larecipe": "^2.2",
         "biscolab/laravel-recaptcha": "^3.5",
+        "facebook/graph-sdk": "^5.7",
         "fideloper/proxy": "^4.0",
         "genealabs/laravel-model-caching": "^0.5.6",
         "intervention/image": "^2.5",
+        "laravel-notification-channels/facebook": "^0.0.3",
         "laravel-notification-channels/facebook-poster": "^1.5",
         "laravel-notification-channels/telegram": "^0.0.5",
         "laravel-notification-channels/twitter": "^3.0",
