--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel-notification-channels/twitter": "^3.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
+        "laravel/scout": "^7.2",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-like": "^1.0",
@@ -30,7 +31,8 @@
         "rennokki/rating": "^1.1",
         "spatie/laravel-responsecache": "^5.0",
         "spatie/laravel-sitemap": "^5.3",
-        "spatie/schema-org": "^2.2"
+        "spatie/schema-org": "^2.2",
+        "yab/laravel-scout-mysql-driver": "^2.40"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
