--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "rennokki/rating": "^1.1",
         "spatie/laravel-responsecache": "^5.0",
         "spatie/laravel-sitemap": "^5.3",
-        "spatie/schema-org": "^2.2"
+        "spatie/schema-org": "^2.2",
+        "tedivm/fetch": "^0.7.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
