--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -65,3 +65,7 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
   </filesMatch>
 </ifModule>
 # END Cache-Control Headers
+
+Header set Access-Control-Allow-Origin "https://www.bachecubano.com"
+Header set Access-Control-Allow-Methods "GET,PUT,POST,DELETE"
+Header set Access-Control-Allow-Headers "Content-Type, Authorization"
