--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "laravel/tinker": "^1.0",
         "overtrue/laravel-like": "^1.0",
         "predis/predis": "^1.1",
+        "renatomarinho/laravel-page-speed": "^1.8",
         "rennokki/befriended": "^1.3",
         "rennokki/rating": "^1.1",
         "spatie/laravel-responsecache": "^5.0",
