--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -58,7 +58,7 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
     Header set Cache-Control "public"
   </filesMatch>
   <filesMatch "\.(js)$">
-    Header set Cache-Control "private"
+    Header set Cache-Control "public"
   </filesMatch>
   <filesMatch "\.(x?html?|php)$">
     Header set Cache-Control "private, must-revalidate"
