--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -41,6 +41,7 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
   ExpiresByType image/gif "access plus 2592000 seconds"
   ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
   ExpiresByType text/css "access plus 604800 seconds"
+  ExpiresByType text/webmanifest "access plus 604800 seconds"
   ExpiresByType text/javascript "access plus 216000 seconds"
   ExpiresByType application/javascript "access plus 216000 seconds"
   ExpiresByType application/x-javascript "access plus 216000 seconds"
@@ -58,6 +59,9 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
     Header set Cache-Control "public"
   </filesMatch>
   <filesMatch "\.(js)$">
+    Header set Cache-Control "public"
+  </filesMatch>
+  <filesMatch "\.(webmanifest)$">
     Header set Cache-Control "public"
   </filesMatch>
   <filesMatch "\.(x?html?|php)$">
