--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,18 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
-        "anlutro/l4-settings": "^0.8.3",
-        "artesaos/seotools": "^0.14.0",
+        "artesaos/seotools": "^0.16.0",
         "binarytorch/larecipe": "^2.2",
         "biscolab/laravel-recaptcha": "^3.5",
         "facebook/graph-sdk": "^5.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
         "intervention/image": "^2.5",
-        "laravel-notification-channels/facebook": "^0.0.3",
+        "laravel-notification-channels/facebook": "^0.0.4",
         "laravel-notification-channels/facebook-poster": "^1.5",
         "laravel-notification-channels/telegram": "^0.0.5",
         "laravel-notification-channels/twitter": "^3.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "6.0.*",
         "laravel/passport": "^7.3",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
@@ -29,8 +28,8 @@
         "predis/predis": "^1.1",
         "renatomarinho/laravel-page-speed": "^1.8",
         "rennokki/befriended": "^1.3",
-        "rennokki/rating": "^1.1",
-        "spatie/laravel-responsecache": "^5.0",
+        "rennokki/rating": "^2.0",
+        "spatie/laravel-responsecache": "^6.3",
         "spatie/laravel-sitemap": "^5.3",
         "spatie/schema-org": "^2.2",
         "tedivm/fetch": "^0.7.1"
@@ -78,8 +77,8 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
             "@php artisan optimize",
-            "@php artisan responsecache:clear",
-            "@php artisan cache:clear"
+            "@php artisan cache:clear",
+            "@php artisan responsecache:clear"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
