--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
             "@php artisan optimize",
+            "@php artisan view:clear",
             "@php artisan cache:clear",
             "@php artisan responsecache:clear"
         ],
