--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -135,7 +135,7 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
     ExpiresByType text/html                             "access plus 0 seconds"
 
   # JavaScript
-    ExpiresByType application/javascript                "access plus 1 hour"
+    ExpiresByType application/javascript                "access plus 1 month"
 
   # Manifest files
     ExpiresByType application/x-web-app-manifest+json   "access plus 0 seconds"
