ExpiresByType application/javascript                "access plus 1 month"

--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -14,6 +14,10 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
+    # Redirect non-www to www
+    RewriteCond %{HTTP_HOST} ^bachecubano.com [NC]
+    RewriteRule ^(.*)$ http://www.bachecubano.com/$1 [L,R=301]
+
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
