Big core update

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "laravel-notification-channels/facebook-poster": "^2.0",
         "laravel-notification-channels/telegram": "^0.0.5",
         "laravel-notification-channels/twitter": "^3.0",
-        "laravel/framework": "6.0.*",
+        "laravel/framework": "^6.2",
         "laravel/passport": "^7.3",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
